# Realtor_Agent

./: .env.example  .gitignore  README.md  pyproject.toml
data/: bcfsa_raw_sample.json
deploy/: realtor-agent-dashboard.service.example  realtor-agent-sync.service.example
src/realtor_agent/: __init__.py  cli.py  dashboard.py  normalization.py  raw_snapshot_store.py  realtor_store.py  sync.py  validation.py
src/realtor_agent/source_adapters/: __init__.py  base.py  bcfsa_algolia.py
tests/: test_normalization.py  test_realtor_store.py  test_sync_safety.py
